--- a/das/.pylintrc
+++ b/das/.pylintrc
@@ -3,7 +3,7 @@ ignore = .venv
 
 [FORMAT]
 variable-rgx = ^[a-z][a-z0-9_]*$
-function-rgx = ^[a-z][a-zA-Z0-9]*$
+function-rgx = ^[a-z][a-z0-9_]*$
 class-rgx = ^[A-Z][a-zA-Z0-9]*$
 
 [MESSAGES CONTROL]
