--- a/eda-java/build.gradle
+++ b/eda-java/build.gradle
@@ -1,12 +1,13 @@
 plugins {
     id 'java'
     id 'checkstyle'
+    id 'maven-publish'
     id 'org.springframework.boot' version '3.4.3'
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.in4sight'
-version = '0.0.1-SNAPSHOT'
+version = '0.1.0'
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
@@ -29,7 +30,6 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
     implementation 'org.springframework.kafka:spring-kafka'
     annotationProcessor 'org.projectlombok:lombok'
     compileOnly 'org.projectlombok:lombok'
@@ -41,6 +41,48 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok'
 }
 
+def env = new Properties()
+file('.publish-info').withInputStream {  env.load(it) }
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            
+            groupId = project.group
+            artifactId = project.name
+            version = project.version
+            
+            pom {
+                name = 'EDA Java'
+                description = 'Event-Driven Architecture Java Library'
+                url = 'https://github.com/in4sight/eda-java'
+                
+                developers {
+                    developer {
+                        id = 'in4sight'
+                        name = 'In4sight Team'
+                    }
+                }
+            }
+        }
+    }
+
+    repositories {
+        maven {
+            url env.getProperty("PUBLISH_URL")
+            credentials {
+                username = env.getProperty("USERNAME")
+                password = env.getProperty("TOKEN")
+            }
+        }
+    }
+}
+
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.named('generateMetadataFileForMavenJavaPublication') {
+    suppressedValidationErrors.add('dependencies-without-versions')
 }
