✨ [JIRA-S12P21S004-144] 상담내역 DB 기본데이터 저장 구현

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -23,6 +23,10 @@ spring:
       mode: always
       platform: all
 
+  data:
+    mongodb:
+      uri: mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@${MONGODB_APPNAME}.b2pc5.mongodb.net/?retryWrites=true&w=majority&appName=${MONGODB_APPNAME}
+      database: ${MONGODB_SCHEMA}
 server:
   port: 8080
 
