🐳 [JIRA-S12P21S004-190] fix dockerfile

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,8 +2,8 @@ FROM openjdk:21-jdk-slim
 
 WORKDIR /app
 
-COPY . /app/
+COPY build/libs/*[!-plain].jar /app/application.jar
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "target/application.jar"]
+CMD ["java", "-jar", "application.jar"]
