✨ [JIRA-S12P21S004-135] EDA 통신 구현

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -32,7 +32,7 @@ server:
 
 eda:
   kafka:
-    bootstrap-server: localhost:9092
+    bootstrap-server: j12s004.p.ssafy.io:8003
     consumer-group: consumer-java
 
 
