✨ [JIRA-S12P21S004-152] 기기 시계열 데이터 및 이벤트 로그 SSE 전송 로직 구현

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -34,7 +34,7 @@ server:
 eda:
   kafka:
     bootstrap-server: j12s004.p.ssafy.io:8003
-    consumer-group: consumer-java
+    consumer-group: consumer-javaman
 
 
 
