--- a/rag/requirements.txt
+++ b/rag/requirements.txt
@@ -1,16 +1,4 @@
 annotated-types==0.7.0
-anyio==4.8.0
-asgiref==3.8.1
-astroid==3.3.9
-asttokens==3.0.0
-awscli==1.38.16
-backoff==2.2.1
-bcrypt==4.3.0
-black==25.1.0
-boto3==1.37.16
-botocore==1.37.16
-build==1.2.2.post1
-cachetools==5.5.2
 anyio==4.9.0
 asgiref==3.8.1
 backoff==2.2.1
@@ -23,27 +11,6 @@ chroma-hnswlib==0.7.6
 chromadb==0.6.3
 click==8.1.8
 colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.2.2
-debugpy==1.8.13
-decorator==5.2.1
-Deprecated==1.2.18
-dill==0.3.9
-distro==1.9.0
-dnspython==2.7.0
-docutils==0.16
-dotenv==0.9.9
-durationpy==0.9
-email_validator==2.2.0
-executing==2.2.0
-fastapi==0.115.11
-fastapi-cli==0.0.7
-filelock==3.18.0
-flatbuffers==25.2.10
-fsspec==2025.3.0
-google-auth==2.38.0
-googleapis-common-protos==1.69.2
-grpcio==1.71.0
 coloredlogs==15.0.1
 Deprecated==1.2.18
 distro==1.9.0
@@ -66,55 +33,20 @@ humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
-ipykernel==6.29.5
-ipython==9.0.2
-ipython_pygments_lexers==1.1.1
-isort==6.0.1
-jedi==0.19.2
-importlib_metadata==8.6.1
-importlib_resources==6.5.2
 Jinja2==3.1.6
-jmespath==1.0.1
-joblib==1.4.2
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kubernetes==32.0.1
 joblib==1.4.2
 kafka-python==2.1.2
 kubernetes==32.0.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-mccabe==0.7.0
 mdurl==0.1.2
 mmh3==5.1.0
 monotonic==1.6
 mpmath==1.3.0
-mypy-extensions==1.0.0
-nest-asyncio==1.6.0
 networkx==3.4.2
 numpy==2.2.4
 oauthlib==3.2.2
-onnxruntime==1.21.0
-opentelemetry-api==1.31.0
-opentelemetry-exporter-otlp-proto-common==1.31.0
-opentelemetry-exporter-otlp-proto-grpc==1.31.0
-opentelemetry-instrumentation==0.52b0
-opentelemetry-instrumentation-asgi==0.52b0
-opentelemetry-instrumentation-fastapi==0.52b0
-opentelemetry-proto==1.31.0
-opentelemetry-sdk==1.31.0
-opentelemetry-semantic-conventions==0.52b0
-opentelemetry-util-http==0.52b0
-orjson==3.10.15
-overrides==7.7.0
-mmh3==5.1.0
-monotonic==1.6
-mpmath==1.3.0
-networkx==3.4.2
-numpy==2.2.4
-oauthlib==3.2.2
-onnxruntime==1.21.0
+onnxruntime
 opentelemetry-api==1.31.1
 opentelemetry-exporter-otlp-proto-common==1.31.1
 opentelemetry-exporter-otlp-proto-grpc==1.31.1
@@ -128,18 +60,6 @@ opentelemetry-util-http==0.52b1
 orjson==3.10.15
 overrides==7.7.0
 packaging==24.2
-parso==0.8.4
-pathspec==0.12.1
-pillow==11.1.0
-pip-review==1.3.0
-platformdirs==4.3.6
-posthog==3.21.0
-prompt_toolkit==3.0.50
-protobuf==5.29.4
-psutil==7.0.0
-pure_eval==0.2.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
 pillow==11.1.0
 posthog==3.21.0
 protobuf==5.29.4
@@ -149,59 +69,30 @@ pydantic==2.10.6
 pydantic-settings==2.8.1
 pydantic_core==2.27.2
 Pygments==2.19.1
-pylint==3.3.5
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-pyreadline3==3.5.4
-python-dateutil==2.9.0.post0
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-multipart==0.0.20
-pywin32==310
 PyYAML==6.0.2
-pyzmq==26.3.0
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 rich==13.9.4
-rich-toolkit==0.13.2
-rsa==4.7.2
-s3transfer==0.11.4
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.15.2
 rsa==4.9
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
 sentence-transformers==3.4.1
-setuptools==77.0.1
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
-stack-data==0.6.3
 starlette==0.46.1
 sympy==1.13.1
 tenacity==9.0.0
 threadpoolctl==3.6.0
 tokenizers==0.21.1
-tomlkit==0.13.2
 torch==2.6.0
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.49.0
-sympy==1.13.1
-tenacity==9.0.0
-threadpoolctl==3.6.0
-tokenizers==0.21.1
-torch==2.6.0+cpu
 tqdm==4.67.1
 transformers==4.50.0
 typer==0.15.2
@@ -209,8 +100,6 @@ typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.34.0
 watchfiles==1.0.4
-wcwidth==0.2.13
-websocket-client==1.8.0
 websocket-client==1.8.0
 websockets==15.0.1
 wrapt==1.17.2
