🎉 [JIRA-S12P21S004-146] MongoDB 접근 URL 변경

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -25,8 +25,7 @@ spring:
 
   data:
     mongodb:
-      uri: mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@${MONGODB_APPNAME}.b2pc5.mongodb.net/?retryWrites=true&w=majority&appName=${MONGODB_APPNAME}
-      database: ${MONGODB_SCHEMA}
+      uri: mongodb://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@${MONGODB_URL}/${MONGODB_DATABASE}?authSource=admin
 
 server:
   port: 8080
