🔨 [JIRA-S12P21S004-146] 고객 보유기기 더미데이터 및 DTO클래스 수정

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -33,7 +33,7 @@ server:
 eda:
   kafka:
     bootstrap-server: j12s004.p.ssafy.io:8003
-    consumer-group: consumer-javaman
+    consumer-group: consumer-java
 
 
 
