--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     defer-datasource-initialization: true
   sql:
     init:
