🚧 [JIRA-S12P21S004-194] 그래프 공통화 작업 진행중

--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -8,8 +8,8 @@
   "importOrder": [
     "^[A-Z](.*)$",
     "^@store/(.*)$",
-    "^@common/(.*)$",
     "^@ui/(.*)$",
+    "^@lib/(.*)$",
     "^[./]"
   ],
   "importOrderSeparation": true,
