🚧 [JIRA-S12P21S004-194] 그래프 공통화 작업중

--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -2,7 +2,7 @@
   "semi": false,
   "singleQuote": true,
   "objectWrap": "collapse",
-  "proseWrap": "always",
+  "proseWrap": "preserve",
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
 
   "importOrder": [
