--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
-    "lucide-react": "^0.482.0",
+    "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -35,6 +35,7 @@
     "@eslint/js": "^9.23.0",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/postcss": "^4.0.17",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
