--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.4.1",
+    "react-router-dom": "^7.4.1",
     "recharts": "^2.15.1",
     "redux": "^5.0.1",
     "tailwind-merge": "^3.1.0",
