💄 [JIRA-S12P21S004-300] 사이드바 디자인 개선

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,21 +13,25 @@
   },
   "dependencies": {
     "@fontsource/material-icons": "^5.2.5",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.17",
     "apexcharts": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.6.2",
-    "lucide-react": "^0.484.0",
+    "framer-motion": "^12.6.3",
+    "lucide-react": "^0.487.0",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
-    "recharts": "^2.15.1",
+    "recharts": "^2.15.2",
     "redux": "^5.0.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
@@ -45,7 +49,7 @@
     "@types/react-router": "^5.1.20",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
-    "daisyui": "^5.0.9",
+    "daisyui": "^5.0.12",
     "eslint": "^9.24.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
