--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@fontsource/material-icons": "^5.2.5",
     "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -34,6 +36,7 @@
     "recharts": "^2.15.2",
     "redux": "^5.0.1",
     "tailwind-merge": "^3.1.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "zustand": "^5.0.3"
